# Data-Assimilation-Toolbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.circleci/: config.yml
.code_quality/: .flake8  .pylintrc
amlcs/: __init__.py  preprocessing.py
amlcs/conf/: conf_pre.yaml
amlcs/conf/preprocessing/: pre_t21.yaml  pre_t30.yaml
amlcs/numerical_models/: numerical_model.py
amlcs/templates/: cls_instep.h
amlcs/utils/: file_manager.py
tests/: conftest.py  test_filemanager.py  test_numerical_model.py
