[tool.poetry]
name = "amlcs"
version = "0.0.2"
description = "Data Assimilation Package using SPEEDY model. Developed by AML-CS at Uninorte"
authors = ["Elias Niño", "Randy Consuegra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
bandit = "^1.7.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov-report term-missing  --cov=amlcs"
testpaths = [
    "tests",
]